# audioscout

./: Makefile  Makefile.windows32  ProjectHome.md  README.txt  SendThread.cpp  audiodata.c  auscout-client.c  auscout.c  mdata.db  metadatadb.c  moc_SendThread.cpp  retrieve_client.c  table_server.c  tblserver_driver.c  test_audiodata.c  test_index.c  testaudiohash.c  testbark.c
clients/: CMakeLists.txt
libs/: CMakeLists.txt  audiodata.c  audiodata.h  pHashAudioConfig.h.in  phash_audio.c  phash_audio.h
libs/bindings/csharp/: README.txt  TestNI.cs  audiodata.cs  phashaudio.cs
libs/bindings/java/: AudioScout-jni.cpp  CMakeLists.txt
libs/bindings/java/org/phash/: AudioMetaData.java  pHash.java
servers/: auscout.c
src/: CMakeLists.txt
tests/: test_audiodata.c
trunk/: ChangeLog.txt  License.txt  Makefile  MeterWidget.cpp  MeterWidget.h  README-distr.txt  README.txt  SendThread.h  _region_.tex  audio_index.c  audiodata.d  audiodata.h  auscout-client-main.pro  auscout-client.c  auscout-driver.c  auscout-sink.c  auscout.c  complex.c  complex.d  complex.h  fft.c  fft.h  mainwindow.cpp  mainwindow.h  metadatadb.c  metadatadb_client.c  metadatadb_driver.c  moc_MeterWidget.cpp  moc_mainwindow.cpp  phash_audio.c  phash_audio.h  pom.xml  serialize.h  table_server.c  test_audiodata.c  test_index.c  testmergeindex.c  testserialize.c  zmqhelper.h
trunk/AudioScout/: ChangeLog.txt  README.txt  pom.xml
trunk/AudioScout/src/main/java/org/phash/audioscout/client/: ASDemo.java  AudioScout.java
trunk/AudioScout/src/main/java/org/phash/audioscout/server/: Auscoutd.java  KratiAudioHashStore.java  Sweeper.java
trunk/JPHashAudio/: ChangeLog.txt  README.txt  pom.xml  svn-commit.2.tmp  svn-commit.tmp
trunk/JPHashAudio/src/main/java/org/phash/phashaudio/: AudioHashDistance.java  AudioHasher.java
trunk/JPHashAudio/src/test/java/org/phash/phashaudio/: TestAudioHasher.java
trunk/clients/: CMakeLists.txt  auscout-client.c  mainwindow.h
trunk/libAudioData/: AudioDataConfig.h  CMakeLists.txt  ChangeLog.txt  README.txt  TestAudioData  audiodata.c  audiodata.h  test_audiodata.c
trunk/libs/: AudioScoutConfig.h.in  CMakeLists.txt  audio_index.c  audiodata.c  audiodata.h  fft.d  pHashAudioConfig.h.in  phash_audio.c  serialize.h
trunk/libs/bindings/csharp/: TestNI.cs  audiodata.cs  phashaudio.cs
trunk/libs/bindings/java/: build.xml  org_phash_AudioHash.cpp
trunk/libs/bindings/java/org/phash/: AudioHash.java  AudioHashObject.java  TestAudio.java
trunk/libs/table-4.3.0phmodified/: CMakeLists.txt  table.c
trunk/servers/: auscout.c  metadatadb.c  table_server.c
trunk/src/: phash_audio.d
trunk/src/main/java/org/phash/audioscout/hash/: QuerySender.java
trunk/src/main/java/org/phash/audioscout/server/: KratiMetaDataStore.java  TableValue.java  TableValueSerializer.java  WorkerThread.java
trunk/src/main/java/org/phash/audioscout/util/: MDataScroll.java  MetaDataIter.java
trunk/src/main/java/org/phash/phashaudio/: AudioHasher.java
trunk/table-4.3.0phmodified/: Makefile  Makefile.windows32
trunk/testdir/: test2.txt
trunk/tests/: CMakeLists.txt  tblserver_driver.c  test_audiodata.c  testaudiohash.c
wiki/: Support.wiki
